Feat: 리뷰 메시지 페이징 프론트 작업

--- a/src/main/resources/templates/memberHome.html
+++ b/src/main/resources/templates/memberHome.html
@@ -121,7 +121,7 @@
                 <div class="no-message" th:if="${reviewMessageBrief.isEmpty()}">
                    <div> 받은 거래 후기가 없습니다.</div>
                 </div>
-                <div th:unless="${reviewMessageBrief.isEmpty()}" class="px-3 mt-3 content">
+                <div id="review_messages" th:unless="${reviewMessageBrief.isEmpty()}" class="px-3 mt-3 content">
                     <div class="message-one" th:each="review:${reviewMessageBrief}">
                         <div class="profile-line">
                             <div class="message-profile-img">
@@ -193,11 +193,12 @@
     <div class="reviewModal review_modal">
         <div class="review_modal_body">
             <div class="modal_box">
-                <a id="review_hide_btn" th:if="${session.loginMember != null && session.loginMember.memId.equals(memId)}">
+                <a id="review_hide_btn">
                     리뷰 숨김</a>
             </div>
+            <hr/>
             <div class="modal_box">
-                <a id="review_del_btn" th:if="${session.loginMember != null && !session.loginMember.memId.equals(memId)}">
+                <a id="review_del_btn">
                     리뷰 삭제</a>
             </div>
             <hr/>
@@ -213,80 +214,11 @@
 </div>
 
 <div layout:fragment="script">
-    <script src="/js/review_modal.js"></script>
     <script th:inline="javascript">
-        const mannerDom = document.getElementsByClassName("manner")[0];
-        const mannerScoreDom =document.getElementsByClassName("mannerScore")[0];
-        const mannerScore=[[${member.mannerScore}]];
-        mannerDom.style.width= `${mannerScore}%`;
-        if(mannerScore >= 85) {
-            mannerScoreDom.style.color = '#e61919';
-            mannerDom.style.backgroundColor = '#e61919';
-        } else if (mannerScore >= 50 && mannerScore < 85){
-            mannerScoreDom.style.color = '#ff9d0a';
-            const mannerScore=[[${member.mannerScore}]];
-            mannerDom.style.backgroundColor = '#ff9d0a';
-        } else if (mannerScore >= 30 && mannerScore < 50) {
-            mannerScoreDom.style.color = '#009900';
-            mannerDom.style.backgroundColor = '#009900';
-        } else if(mannerScore < 30) {
-            mannerScoreDom.style.color = '#0d6efd';
-            mannerDom.style.backgroundColor = '#0d6efd';
-        }
-
-
-        $("#block_btn").on("click", block);
-        function block() {
-            const blockConfirm = confirm("차단시 서로의 게시글을 확인하거나 채팅을 할 수 없어요. 차단하실래요?");
-            if (!blockConfirm) {
-                return;
-            }
-            requestBlock();
-        }
-        function requestBlock() {
-            let data = {
-                fromMemId : [[${session.loginMember?.memId}]],
-                toMemId : [[${member.memId}]]
-            }
-            $.ajax({
-                type: 'post',
-                url: '/blocks',
-                data: JSON.stringify(data),
-                contentType: "application/json; charset=utf-8",
-                success: function (data) {
-                    alert("차단에 성공했습니다.");
-                    $('#postList').load(location.href+' #postList');
-                    $('#pf-setting').empty();
-                    $('#pf-setting').append( `<a id="block_cancel_btn" class="pf-btn" type="button">차단해제</a>`)
-                },
-                error: function (err) {
-                    console.err(err.responseJSON);
-                    alert("차단에 실패했습니다.");
-                }
-            })
-        }
-
-        $("#block_cancel_btn").on("click", cancelBlock);
-        function cancelBlock(){
-            let data = {
-                fromMemId : [[${session.loginMember?.memId}]],
-                toMemId : [[${member.memId}]]
-            }
-            $.ajax({
-                type: 'delete',
-                url: '/blocks',
-                data: JSON.stringify(data),
-                contentType: "application/json; charset=utf-8",
-                success: function (data) {
-                    alert("차단을 해제했습니다");
-                    $('#postList').load(location.href+' #postList');
-                    $('#pf-setting').empty();
-                    $('#pf-setting').append( `<a id="block_btn" class="pf-btn" type="button">차단하기</a>`)
-                },
-                error: function (err) {
-                    alert("차단에 실패했습니다.");
-                }
-            })
-        }
+        const mannerScore = [[${member.mannerScore}]];
+        const loginMemberId = [[${session.loginMember?.memId}]];
+        const homeMemberId = [[${member.memId}]];
     </script>
+    <script src="/js/review/review_modal.js"></script>
+    <script src="/js/member_home.js"></script>
 </div>
