Refactor: 리뷰타입에 따른 리뷰메시지 반환
리뷰 타입(판매자/구매자/전체)에 따라 리뷰메시지 담은 CursorResult를 만드는 방법이 다름
: (수정전) if-else로 나눠 ReviewService에서 모두 처리
-> (수정후) ReviewMessage팩토리 생성하여 각 리뷰타입에 따른 서비스에서 처리하도록 추상화
ReviewService에서는 ReviewMessageFactory만 호출.

--- a/src/main/resources/templates/review/publicReviews.html
+++ b/src/main/resources/templates/review/publicReviews.html
@@ -26,7 +26,7 @@
 
     <!--전체 후기-->
     <div id="allReviews" th:with="cursorResult=${resultMap['allMessageResult']},
-                                  messageList=${cursorResult.values}">
+                                  messageList=${cursorResult.valueList}">
         <div class="no_review" th:if="${messageList.isEmpty()}">
            받은 거래 후기가 없습니다.
         </div>
@@ -110,7 +110,7 @@
     <!--구매자 후기-->
     <div id="sellerReviews"
          th:with="cursorResult=${resultMap['toSellerMessageResult']},
-                  messageList=${cursorResult.values}">
+                  messageList=${cursorResult.valueList}">
         <div class="no_review" th:if="${messageList.isEmpty()}">
             구매자 후기가 없습니다.
         </div>
@@ -168,7 +168,7 @@
     <!-- 판매자 리뷰-->
     <div id="buyerReviews"
          th:with="cursorResult=${resultMap['toBuyerMessageResult']},
-                  messageList=${cursorResult.values}">
+                  messageList=${cursorResult.valueList}">
         <div class="no_review" th:if="${messageList.isEmpty()}">
             판매자 후기가 없습니다.
         </div>
