Feat: 네이버 소셜 로그인 추가
-NaverOauth
properties파일의 값들을 NaverOauth에 바인딩할때, 필드에 final붙여 불변 값으로 -> 생성자 바인딩(@ConstructorBinding)사용해야하므로 이를 위해 의존성(spring-boot-configuration-processor) 추가

--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -52,8 +52,8 @@
                 <button  th:if="${session.loginMember.role.name().equals('NORMAL')}"
                          class="custom-btn" type="submit"> 로그아웃 </button>
                 <button  th:if="${session.loginMember.role.name().contains('SOCIAL')}"
-                         class="custom-btn" type="button"
-                         th:onclick="logoutSocial([[${session.loginMember?.role.name()}]])"> 로그아웃 </button>
+                         class="custom-btn" type="button" id="logout-social-btn"
+                         th:data-role="${session.loginMember.role.name()}"> 로그아웃 </button>
             </form>
         </div>
     </div>
