--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -118,9 +118,29 @@
     line-height: normal;
     display: inline-block;
 }
+
 .bottom-sec .btn-kakao p {
     line-height: normal;
     display: inline-block;
     margin: auto 5px;
     font-weight: normal;
+}
+
+.bottom-sec .bottom-social .btn-naver {
+    all : unset;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 50px;
+    background-color: #03C75A;
+    /*border: 1px solid #dee2e6;*/
+    /*padding: 0.375rem 0.75rem;*/
+    border-radius: 0.25rem;
+    cursor: pointer;
+}
+
+.bottom-sec .btn-naver img{
+    max-height: 45px;
+    max-width: 300px;
 }
