--- a/src/main/resources/templates/member/joinForm.html
+++ b/src/main/resources/templates/member/joinForm.html
@@ -17,10 +17,10 @@
                 <div class="py-4 text-center">
                     <h2 class="mb-0">소셜 회원가입</h2>
                 </div>
-                <h6 class="mt-3 mb-4 text-center">[[${platform}]]계정으로 망고마켓 가입이 필요합니다.</h6>
+                <h4 class="mt-3 mb-4 text-center">[[${platform}]]계정으로 망고마켓 가입이 필요합니다.</h4>
                 <form id="socialForm">
-                    <input type="hidden" id="emailSocial" th:value="${userInfo.get('email')}">
-                    <input type="hidden" id="profImgUrl" th:value="${userInfo.get('profPath')}">
+                    <input type="hidden" id="emailSocial" th:value="${userInfo.email}">
+                    <input type="hidden" id="profImgUrl" th:value="${userInfo.profileImgUrl}">
                     <div class="input">
                         <label for="locSocial">내 동네</label>
                         <select id="locSocial" name="locSocial" class="form-select">
@@ -33,7 +33,7 @@
                         <label for="nicknameSocial">닉네임</label>
                         <input type="text" id="nicknameSocial"
                                class="form-control"
-                               th:value="${userInfo.get('nickname')}">
+                               th:value="${userInfo.nickname}">
                         <div id="nick-error-social"/>
                     </div>
                     <div class="bottom-sec">
