Feat: 로그인타입 argumentResolver추가
-OauthController에서 platform을 파라미터로 받아서 Role(enum)으로 변환하는 로직이 반복.

--- a/src/main/resources/templates/member/loginForm.html
+++ b/src/main/resources/templates/member/loginForm.html
@@ -67,10 +67,10 @@
       const existsMember = document.getElementById('existsMember');
       if(existsMember) {
         const joinedRole = existsMember.getAttribute('data-joinedRole');
-        let phrases = joinedRole == 'NORMAL' ? '일반 회원으로' :
-                joinedRole == 'SOCIAL_KAKAO' ? '카카오로' :
-                        joinedRole == 'SOCIAL_NAVER' ? '네이버로' : '관리자 계정으로';
-        alert(`이미 ${phrases} 가입된 계정입니다.`);
+        let phrases = joinedRole == 'NORMAL' ? '일반 회원으로 ' :
+                joinedRole == 'SOCIAL_KAKAO' ? '카카오로 ' :
+                        joinedRole == 'SOCIAL_NAVER' ? '네이버로 ' : '';
+        alert(`이미 ${phrases}가입된 계정입니다.`);
       }
     });
   </script>
